--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.GridContainer{
+  height: 100vh;
+  display: grid;
+  grid-template-areas:"nav nav"
+                      "side cate"
+                      "side content";
+  grid-template-columns: 73px 1fr;
+  grid-template-rows: 55px 55px 1fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.GridContainer > .Navbar {
+  background-color: white;
+  grid-area: nav;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.GridContainer > .Sidebar {
+  background-color: white;
+  grid-area: side;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.GridContainer > .Categories {
+  background-color: white;
+
+  border-top: 1px rgb(225, 225, 225) solid;
+  border-bottom: 1px rgb(225, 225, 225) solid;
+  grid-area: cate;
 }
 
-.App-link {
-  color: #61dafb;
+.GridContainer > .Content {
+  background-color: rgb(245, 245, 245);
+  grid-area: content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
